# ts-live

./: .clang-format  .dockerignore  .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  README_Docker.md  README_Docker_acme.md  README_Docker_tailscale.md  README_chinachu_epgstation.md  _headers  docker_env_sample  next.config.js  package.json  tsconfig.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  nginx.conf
.devcontainer/mirakc/: Dockerfile  config.yml
.devcontainer/mirakc-scripts/: init-mirakc.sh  setup-mirakc.py
.github/: codeql-config.yml  dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/workflows/: build-next.yml  build-wasm.yml  codeql-analysis.yml  docker-publish-release.yml  docker-publish.yml  pinact.yml  release-drafter.yml  release-to-branch.yml
components/: caption.tsx
docker/: docker-entrypoint.sh
docker/nginx-template/conf/: nginx.conf
docker/nginx-template/conf/conf.d/: ssl.conf
docker/nginx-template/ssl/: acme.sh.conf  ssl.conf
docker/template/: supervisord_acme.sh.conf  supervisord_tailscale.conf
docker/template/nginx/conf/conf.d/: chinachu.conf.inc  epgstation.conf.inc  ssl.conf
docker/template/ofelia/: ofelia_acme.sh.ini  ofelia_tailscale.ini
docker/template/yacron/: acme.sh.yml  tailscale.yml
docs/learn/: interlace-telecine.md  yadif.md
lib/: audio.ts  ffmpeg-worker.ts  ffmpeg.d.ts  ffmpeg.js  ffmpeg.wasm  pes.ts  ts.ts  wasmmodule.ts
lib/wasm/: ts-live.js  ts-live.worker.js  wasmlib.ts
pages/: aac_test.tsx  audio_test.tsx  ffmpeg_sdl2.tsx  ffmpeg_test.tsx  ffmpeg_test_worker.tsx  index.tsx  wasm_test.tsx  wasm_test2.tsx  zlplayer_test.tsx
public/: _headers
public/wasm/: ffmpeg-sdl2.js  ffmpeg-sdl2.wasm  ffmpeg-sdl2.worker.js  ts-live.js  ts-live.wasm  ts-live.worker.js
public/wasm/lib/cmake/fmt/: fmt-config-version.cmake  fmt-targets.cmake
public/wasm/lib/pkgconfig/: fmt.pc
scripts/: get-version.js
src/components/: caption.tsx
src/lib/: wasmmodule.ts
src/pages/: _app.jsx  index.tsx  menu.tsx
src/pages/file/: index.tsx
src/pages/live/: index.tsx
wasm/: CMakeLists.txt  adtsfeeder.hpp  audio.hpp  clapack-wasm-libf2c.patch  datafeeder.hpp  ffmpeg-sdl2.cpp  ffmpeg-wasm.cpp  ffmpeg-wasm.patch  halide-yadif.cpp  openfst.patch  patpmt.hpp  pes.hpp  ts-live.cpp  ts-splitter.cpp  ts.hpp  tsreadex-cmake.patch  tsreadex-copy-audio.patch  tsreadex.patch  yadif_replace.c
wasm/audio/: audioworklet.cpp  audioworklet.hpp  processor.js
wasm/decoder/: decoder.cpp  decoder.hpp
wasm/halide/: CMakeLists.txt  dif.cpp
wasm/lib/: ffmpeg-wasm-es6.wasm  ffmpeg.js
wasm/src/: ts-live.cpp
wasm/src/audio/: audioworklet.cpp  audioworklet.hpp  processor.js
wasm/src/decoder/: decoder.cpp
wasm/src/util/: util.cpp  util.hpp
wasm/src/video/: webgpu.cpp  webgpu.hpp
wasm/src/video/shaders/: simple.frag.wgsl  simple.vert.wgsl  yadif.frag.wgsl
wasm/video/: webgpu.cpp  webgpu.hpp
wasm/video/shaders/: simple.frag.wgsl  simple.vert.wgsl  yadif.frag.wgsl  yuv2rgba.frag.wgsl
